--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -29,7 +29,10 @@
       "react/jsx-one-expression-per-line": "off",
       "object-curly-newline": "off",
       "linebreak-style": "off",
-      "no-param-reassign": "off"
+      "no-param-reassign": "off",
+      "quotes": ["off", "single"],
+      "react/self-closing-comp":0
+     
     }
   }
   
