--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "env": {
+      "browser": true
+    }
   },
   "browserslist": {
     "production": [
