--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    
     "extends": [
       "react-app",
       "react-app/jest"
@@ -42,13 +41,14 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools": "^3.7.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4"
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "redux-devtools": "^3.7.0",
+    "url-loader": "^4.1.1"
   }
 }
