--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -31,7 +31,8 @@
       "linebreak-style": "off",
       "no-param-reassign": "off",
       "quotes": ["off", "single"],
-      "react/self-closing-comp":0
+      "react/self-closing-comp":0,
+      "react/prop-types":"off"
      
     }
   }
