서비스 제외 컴포넌트화 완료

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -32,7 +32,7 @@
       "no-param-reassign": "off",
       "quotes": ["off", "single"],
       "react/self-closing-comp":0,
-      "react/prop-types":"off"
+      "react/prop-types":"off",
      
     }
   }
