gnb 마우스오버 연결동작 추가

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -33,6 +33,7 @@
       "quotes": ["off", "single"],
       "react/self-closing-comp":0,
       "react/prop-types":"off",
+      "no-unused-vars":"off",
      
     }
   }
