--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -13,7 +13,8 @@
       "es6": true
     },
     "extends": [
-      "airbnb"
+      "eslint:recommended",
+      "plugin:react/recommended"    
     ],
     "plugins": [
       "import",
@@ -33,8 +34,8 @@
       "quotes": ["off", "single"],
       "react/self-closing-comp":0,
       "react/prop-types":"off",
-      "no-unused-vars":"off",
-     
+      "no-unused-vars":"off"
+    
     }
   }
   
