--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -34,6 +34,8 @@
       "react/self-closing-comp":0,
       "react/prop-types":"off",
       "no-unused-vars":"off",
+      "import/no-extraneous-dependencies":"off",
+      "object-shorthand":"off"
      
     }
   }
