--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "firebase": "^8.2.4",
+    "immer": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4",
     "xml-js": "^1.6.11"
   },
@@ -54,6 +56,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.8",
     "url-loader": "^4.1.1"
   }
 }
